[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlineage"
version = "0.1.0-dev"
description = "Track how your ML models evolve, not just what they are."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["machine-learning", "mlops", "continual-learning", "lineage", "model-tracking"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
mlflow = ["mlflow>=2.0"]
huggingface = ["huggingface-hub>=0.20"]
dvc = ["dvc>=3.0"]
analysis = ["evidently>=0.4", "scipy>=1.10"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "black>=24.0",
    "ruff>=0.3",
    "pre-commit>=3.0",
]
all = ["mlineage[mlflow,huggingface,dvc,analysis]"]

[project.urls]
Homepage = "https://github.com/Fredbcx/mlineage"
Repository = "https://github.com/Fredbcx/mlineage"
Issues = "https://github.com/Fredbcx/mlineage/issues"
Discussions = "https://github.com/Fredbcx/mlineage/discussions"

[tool.mypy]
strict = true
python_version = "3.9"

[tool.black]
line-length = 95
target-version = ["py39"]

[tool.ruff]
line-length = 95
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
